# financial-advisor

./: .env.example  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
agents/: graph.py  portfolio_agent.py  profile_agent.py  research_agent.py  state.py
api/: main.py
api/routers/: profiles.py  recommendations.py
config/: settings.py
core/: allowlist.py  candidate_selector.py  financial_math.py  market_data.py
db/: models.py  repository.py  session.py
prompts/: portfolio.md  profile.md  research.md
schemas/: investor.py  recommendation.py
scripts/: init_db.py  setup.sh
tests/: test_allowlist.py  test_graph.py  test_market_data.py
